@@ -34,7 +34,7 @@ INSTALL_SCRIPT  = $(INSTALL)
 INSTALL_DATA    = $(INSTALL) -m 0644
 INSTALL_USER    = $(INSTALL) -m 0644 -o $(DOMJUDGE_USER)
 INSTALL_WEBSITE = $(INSTALL) -m 0644 -o $(DOMJUDGE_USER) -g $(WEBSERVER_GROUP)
-INSTALL_DIR     = $(INSTALL) -d
+INSTALL_DIR     = mkdir -p
 
 # Check whether we are running under Cygwin:
 ifneq ($(findstring CYGWIN,$(shell uname)),)
